--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@thirdweb-dev/react": "^4.6.22",
-    "@thirdweb-dev/sdk": "^4.0.83",
     "ethers": "^5",
     "next": "14.2.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "thirdweb": "^5.22.1"
   },
   "devDependencies": {
     "@types/node": "^20",
