--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ethers": "^5",
     "next": "14.2.2",
+    "pino-pretty": "^11.0.0",
     "react": "^18",
     "react-dom": "^18",
     "thirdweb": "^5.22.1"
