--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 NEXT_PUBLIC_TEMPLATE_CLIENT_ID = bc11e5dd0a1ff127bfe6729eb655bc56
+NEXT_PUBLIC_SUBGRAPH_URL = https://api.studio.thegraph.com/query/45674/memtize-front/0.0.1
