--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.10.4",
     "ethers": "^5",
+    "graphql": "^16.8.1",
     "next": "14.2.2",
     "pino-pretty": "^11.0.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "thirdweb": "^5.22.1"
   },
   "devDependencies": {
