--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_TEMPLATE_CLIENT_ID = bc11e5dd0a1ff127bfe6729eb655bc56
-NEXT_PUBLIC_SUBGRAPH_URL = https://api.studio.thegraph.com/query/45674/memtize-front/0.0.1
+NEXT_PUBLIC_SUBGRAPH_URL = https://api.studio.thegraph.com/query/45674/memtize/v0.0.1
+NEXT_PUBLIC_ADMIN_ADDRESS= 0xb10f3577020e0f6dad1e1f9deb44df69769b494d
