--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.10.4",
+    "@thirdweb-dev/react": "^4.6.28",
     "ethers": "^5",
     "graphql": "^16.8.1",
     "next": "14.2.2",
