--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "pino-pretty": "^11.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "thirdweb": "^5.22.1"
   },
   "devDependencies": {
